--- a/styles/less/views/featured/featured.less
+++ b/styles/less/views/featured/featured.less
@@ -41,6 +41,7 @@
 .product_image
 {
 	width: 45vh;
+	transition: transform 1s;
 
 	@media only screen and (orientation: landscape) {
 		width: 60vh;
