--- a/styles/less/views/instafeed/instafeed.less
+++ b/styles/less/views/instafeed/instafeed.less
@@ -3,33 +3,61 @@
 @import "../../utilities/variables.less";
 @import "../../utilities/fonts.less";
 
-.arrow {
-	font-size: 2rem;
+.insta_cont {
+	position: relative;
+	width: 100%;
+}
+
+.arrow_cont {
 	position: absolute;
+	bottom: 10%;
+	width: 100%;
+	display: flex;
+	justify-content: space-around;
+
+	@media only screen and (orientation: landscape) {
+		justify-content: space-between;
+		width: 90%;
+		left: 50%;
+		transform: translateX(-50%);
+		bottom: 50%;
+	}
+
+	@media only screen and (min-width: 700px) {
+		bottom: 6%;
+	}
+
+	@media only screen and (orientation: landscape) {
+		bottom: 50%;
+	}
+
+
+
 }
 
-#instarrow1 {
-	right: 5%;
-	top: 50%;
-	transform: translateY(-50%);
-}
+#gall_right, #gall_left {
+	color: white;
+	font-size: 5vh;
 
-#instarrow2 {
-	left: 5%;
-	top: 50%;
-	transform: translateY(-50%);
+	@media only screen and (orientation: landscape) {
+		font-size: 5vw;
+	}
 }
-
 
 #instafeed {
 	height: 100vh;
 	display: flex;
 	align-items: center;
-	width: 100vw;
+	width: 100%;
 	overflow: hidden;
 	background-color: black;
+
 	
 	.instaimg {
+
+		position: relative;
+		left: 0;
+		transition: left 1s;
 
 		img {
 			width: 90vw;
