--- a/styles/css/views/featured/featured.css
+++ b/styles/css/views/featured/featured.css
@@ -20,41 +20,6 @@
   opacity: 1;
 }
 @font-face {
-  font-family: 'Bentham';
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: local('Bentham Regular'), local('Bentham-Regular'), url(https://fonts.gstatic.com/s/bentham/v9/VdGeAZQPEpYfmHglGWsxDA.ttf) format('truetype');
-}
-@font-face {
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 100;
-  font-display: swap;
-  src: local('Montserrat Thin'), local('Montserrat-Thin'), url(https://fonts.gstatic.com/s/montserrat/v13/JTUQjIg1_i6t8kCHKm45_QpRyS7j.ttf) format('truetype');
-}
-@font-face {
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 200;
-  font-display: swap;
-  src: local('Montserrat ExtraLight'), local('Montserrat-ExtraLight'), url(https://fonts.gstatic.com/s/montserrat/v13/JTURjIg1_i6t8kCHKm45_aZA3gnD-w.ttf) format('truetype');
-}
-@font-face {
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 300;
-  font-display: swap;
-  src: local('Montserrat Light'), local('Montserrat-Light'), url(https://fonts.gstatic.com/s/montserrat/v13/JTURjIg1_i6t8kCHKm45_cJD3gnD-w.ttf) format('truetype');
-}
-@font-face {
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: local('Montserrat Regular'), local('Montserrat-Regular'), url(https://fonts.gstatic.com/s/montserrat/v13/JTUSjIg1_i6t8kCHKm459Wlhzg.ttf) format('truetype');
-}
-@font-face {
   font-family: 'Beyond';
   src: url('../../fonts/beyond_the_mountains.otf') format('opentype'), url('../../fonts/beyond_the_mountains.ttf') format('truetype');
 }
@@ -66,6 +31,21 @@
   flex-direction: column;
   width: 100%;
   height: 300vh;
+  margin: 5% 0;
+}
+@media only screen and (min-height: 812px) and (orientation: portrait) {
+  .arrivals {
+    height: 240vh;
+  }
+}
+@media only screen and (min-width: 1000px) {
+  .arrivals {
+    width: 95%;
+    margin: 0 auto;
+    flex-direction: row;
+    justify-content: space-around;
+    height: 100vh;
+  }
 }
 .product {
   height: 100vh;
@@ -75,6 +55,11 @@
   justify-content: center;
   align-items: center;
 }
+@media only screen and (min-height: 812px) and (orientation: portrait) {
+  .product {
+    height: 80vh;
+  }
+}
 .product_image {
   width: 45vh;
 }
@@ -83,16 +68,31 @@
     width: 60vh;
   }
 }
+@media only screen and (min-width: 1000px) {
+  .product_image {
+    width: 25vw;
+  }
+}
 .product_info {
   font-size: 3.5vh;
   font-family: 'Montserrat', sans-serif;
   color: black;
   text-align: center;
-  margin-top: 5px;
+}
+@media only screen and (orientation: portrait) {
+  .product_info {
+    width: 80vw;
+  }
 }
 @media only screen and (orientation: landscape) {
   .product_info {
     font-size: 3.5vw;
+  }
+}
+@media only screen and (min-width: 1000px) {
+  .product_info {
+    width: 22vw;
+    font-size: 2.5vh;
   }
 }
 .product_info p {
