--- a/styles/css/views/footer/footer.css
+++ b/styles/css/views/footer/footer.css
@@ -20,41 +20,6 @@
   opacity: 1;
 }
 @font-face {
-  font-family: 'Bentham';
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: local('Bentham Regular'), local('Bentham-Regular'), url(https://fonts.gstatic.com/s/bentham/v9/VdGeAZQPEpYfmHglGWsxDA.ttf) format('truetype');
-}
-@font-face {
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 100;
-  font-display: swap;
-  src: local('Montserrat Thin'), local('Montserrat-Thin'), url(https://fonts.gstatic.com/s/montserrat/v13/JTUQjIg1_i6t8kCHKm45_QpRyS7j.ttf) format('truetype');
-}
-@font-face {
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 200;
-  font-display: swap;
-  src: local('Montserrat ExtraLight'), local('Montserrat-ExtraLight'), url(https://fonts.gstatic.com/s/montserrat/v13/JTURjIg1_i6t8kCHKm45_aZA3gnD-w.ttf) format('truetype');
-}
-@font-face {
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 300;
-  font-display: swap;
-  src: local('Montserrat Light'), local('Montserrat-Light'), url(https://fonts.gstatic.com/s/montserrat/v13/JTURjIg1_i6t8kCHKm45_cJD3gnD-w.ttf) format('truetype');
-}
-@font-face {
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: local('Montserrat Regular'), local('Montserrat-Regular'), url(https://fonts.gstatic.com/s/montserrat/v13/JTUSjIg1_i6t8kCHKm459Wlhzg.ttf) format('truetype');
-}
-@font-face {
   font-family: 'Beyond';
   src: url('../../fonts/beyond_the_mountains.otf') format('opentype'), url('../../fonts/beyond_the_mountains.ttf') format('truetype');
 }
@@ -66,31 +31,6 @@ footer {
   justify-content: space-around;
   align-items: center;
 }
-.footer_nav {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  justify-content: end;
-  align-items: center;
-  text-align: center;
-  width: 100%;
-  margin-bottom: 4%;
-}
-.footer_nav a {
-  font-size: 3.5rem;
-  color: #232323;
-  margin-bottom: 2%;
-}
-@media only screen and (max-width: 768px) {
-  .footer_nav a {
-    font-size: 2.5rem;
-  }
-}
-@media only screen and (max-width: 575px) {
-  .footer_nav a {
-    font-size: 1.65rem;
-  }
-}
 .copyright {
   margin-top: 3%;
   padding-bottom: 2%;
@@ -98,4 +38,15 @@ footer {
   font-weight: lighter;
   font-size: 0.5rem;
   color: #232323;
+}
+.footer_logo {
+  margin: 0;
+  width: 25vw;
+  height: 25vw;
+}
+@media only screen and (orientation: landscape) {
+  .footer_logo {
+    width: 25vh;
+    height: 25vh;
+  }
 }
