--- a/styles/css/views/header/navigation.css
+++ b/styles/css/views/header/navigation.css
@@ -20,48 +20,14 @@
   opacity: 1;
 }
 @font-face {
-  font-family: 'Bentham';
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: local('Bentham Regular'), local('Bentham-Regular'), url(https://fonts.gstatic.com/s/bentham/v9/VdGeAZQPEpYfmHglGWsxDA.ttf) format('truetype');
-}
-@font-face {
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 100;
-  font-display: swap;
-  src: local('Montserrat Thin'), local('Montserrat-Thin'), url(https://fonts.gstatic.com/s/montserrat/v13/JTUQjIg1_i6t8kCHKm45_QpRyS7j.ttf) format('truetype');
-}
-@font-face {
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 200;
-  font-display: swap;
-  src: local('Montserrat ExtraLight'), local('Montserrat-ExtraLight'), url(https://fonts.gstatic.com/s/montserrat/v13/JTURjIg1_i6t8kCHKm45_aZA3gnD-w.ttf) format('truetype');
-}
-@font-face {
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 300;
-  font-display: swap;
-  src: local('Montserrat Light'), local('Montserrat-Light'), url(https://fonts.gstatic.com/s/montserrat/v13/JTURjIg1_i6t8kCHKm45_cJD3gnD-w.ttf) format('truetype');
-}
-@font-face {
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: local('Montserrat Regular'), local('Montserrat-Regular'), url(https://fonts.gstatic.com/s/montserrat/v13/JTUSjIg1_i6t8kCHKm459Wlhzg.ttf) format('truetype');
-}
-@font-face {
   font-family: 'Beyond';
   src: url('../../fonts/beyond_the_mountains.otf') format('opentype'), url('../../fonts/beyond_the_mountains.ttf') format('truetype');
 }
-#nav_logo_img {
+.nav_logo_img {
   background-image: url("../../images/logo.png");
   margin-left: 5%;
   background-size: 100%;
+  background-repeat: no-repeat;
   width: 65px;
   height: 65px;
   -webkit-transition: all 200ms ease;
@@ -71,38 +37,37 @@
   transition: all 200ms ease;
 }
 @media only screen and (min-width: 1824px) {
-  #nav_logo_img {
-    width: 165px;
-    height: 165px;
+  .nav_logo_img {
+    width: 125px;
+    height: 125px;
   }
 }
-@media only screen and (max-width: 800px) {
-  #nav_logo_img {
-    width: 43.33333333px;
-    height: 43.33333333px;
-    margin-left: 2.5%;
+@media only screen and (min-width: 3000px) {
+  .nav_logo_img {
+    width: 145px;
+    height: 145px;
   }
 }
-.main_nav {
+.nav {
   width: 50%;
   margin-right: 5%;
 }
 @media only screen and (max-width: 1200px) {
-  .main_nav {
+  .nav {
     width: 65%;
   }
 }
 @media only screen and (max-width: 700px) {
-  .main_nav {
+  .nav {
     display: none;
   }
 }
-.main_nav ul {
+.nav ul {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.main_nav ul li a {
+.nav ul li a {
   font-size: 1rem;
   font-family: 'Montserrat', sans-serif;
   color: black;
@@ -114,29 +79,54 @@
   -o-transition: all 200ms ease;
   transition: all 200ms ease;
 }
+@media only screen and (min-width: 1000px) {
+  .nav ul li a {
+    font-size: 1.5rem;
+  }
+}
 @media only screen and (min-width: 3200px) {
-  .main_nav ul li a {
+  .nav ul li a {
     font-size: 3.5rem;
   }
 }
 @media only screen and (min-width: 1824px) {
-  .main_nav ul li a {
+  .nav ul li a {
     font-size: 2rem;
+  }
+}
+@media only screen and (min-width: 3000px) {
+  .nav ul li a {
+    font-size: 3.75rem;
   }
 }
 .nav_icon {
   width: 30px;
   height: 30px;
 }
-@media only screen and (min-width: 3200px) {
-  .nav_icon {
-    width: 55px;
-    height: 55px;
-  }
-}
 @media only screen and (min-width: 1824px) {
   .nav_icon {
     width: 45px;
     height: 45px;
+  }
+}
+@media only screen and (min-width: 3200px) {
+  .nav_icon {
+    width: 60px;
+    height: 60px;
+  }
+}
+.footer_nav {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+@media only screen and (orientation: landscape) {
+  .footer_nav {
+    flex-direction: row;
+    width: 60%;
+    justify-content: space-around;
+    margin-top: 5vh;
   }
 }
