--- a/styles/less/utilities/fonts.less
+++ b/styles/less/utilities/fonts.less
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Bentham|Montserrat:100,200,300,400&display=swap');
+// @import url('https://fonts.googleapis.com/css?family=Bentham|Montserrat:100,200,300,400&display=swap');
 
 @font-face
 {
