--- a/styles/less/views/footer/social.less
+++ b/styles/less/views/footer/social.less
@@ -4,28 +4,22 @@
 @import "../../utilities/fonts.less";
 
 
-#social
+.social
 {
-    .w(15%);
-    margin: 15px auto 0 auto;
-	.flex(@wrap: nowrap, @jus: space-between, @al: center,);
-	// border: 2px solid green;
+  margin: 5vw 0;
+  width: 25%;
+  .flex(@wrap: nowrap, @jus: space-between, @al: center,);
+}
 
-  @media only screen and (max-width: 767px) 
-  {
-    .w(80%);
+
+.social li a i
+{
+  font-size: 7vw;
+  margin: 0 3vw;
+  color:black;
+  
+  @media only screen and (orientation: landscape) {
+    font-size: 7vh;
   }
 }
 
-
-#social li a i
-{
-	font-size: 24px;
-	color: #937c6f;
-	.trans200();
-
-  @media only screen and (max-width: 400px)
-  {
-		font-size: 18px;
-	}
-}
