--- a/styles/css/views/featured/featured.css
+++ b/styles/css/views/featured/featured.css
@@ -62,6 +62,7 @@
 }
 .product_image {
   width: 45vh;
+  transition: transform 1s;
 }
 @media only screen and (orientation: landscape) {
   .product_image {
