--- a/styles/css/views/footer/newsletter.css
+++ b/styles/css/views/footer/newsletter.css
@@ -24,55 +24,60 @@
   src: url('../../fonts/beyond_the_mountains.otf') format('opentype'), url('../../fonts/beyond_the_mountains.ttf') format('truetype');
 }
 .newsletter {
-  width: 50%;
+  margin-top: 10%;
   text-align: center;
   align-self: center;
-}
-@media only screen and (max-width: 959px) {
-  .newsletter {
-    width: 75%;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .newsletter h1 {
-  font-size: 3.37rem;
+  font-size: 10vw;
   margin-bottom: 2.5%;
 }
-@media only screen and (max-width: 959px) {
+@media only screen and (orientation: landscape) {
   .newsletter h1 {
-    font-size: 2.5rem;
-    margin-bottom: 4%;
+    font-size: 9.5vh;
+  }
+}
+@media only screen and (min-width: 1000px) and (orientation: portrait) {
+  .newsletter h1 {
+    font-size: 6.5vw;
   }
 }
 .newsletter form {
-  width: 100%;
-  display: inline-flex;
-}
-@media only screen and (max-width: 959px) {
-  .newsletter form {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
+  width: 90%;
 }
 .newsletter input.newsletter_input {
-  width: calc(100% - 191px);
-  height: 65px;
+  width: 100%;
+  height: 8vh;
   border: 1px solid black;
   box-sizing: border-box;
-  border-right: none;
 }
-@media only screen and (max-width: 959px) {
+@media only screen and (orientation: landscape) {
   .newsletter input.newsletter_input {
-    height: 35px;
-    width: 100%;
-    border-right: 1px solid black;
-    border-bottom: none;
+    height: 10vh;
   }
 }
-@media only screen and (max-width: 959px) {
+.newsletter input[type="email"]::placeholder {
+  text-align: center;
+  font-size: 2vw;
+  line-height: 2vw;
+  vertical-align: middle;
+}
+.newsletter .button {
+  width: 100%;
+  height: 7vh;
+  margin-top: 1.5vh;
+  font-size: 3vw;
+}
+@media only screen and (orientation: landscape) {
   .newsletter .button {
-    height: 35px;
-    line-height: 35px;
-    width: 100%;
+    height: 10vh;
+  }
+}
+@media only screen and (min-width: 1000px) {
+  .newsletter .button {
+    font-size: 2.5vw;
   }
 }
