--- a/assets/bootstrap/bootstrap-4.0.0/scss/_print.scss
+++ b/assets/bootstrap/bootstrap-4.0.0/scss/_print.scss
@@ -22,7 +22,7 @@
 
     a {
       &:not(.btn) {
-        text-decoration: underline;
+        text-decoration: none;
       }
     }
 
@@ -51,7 +51,7 @@
     }
     pre,
     blockquote {
-      border: $border-width solid #999;   // Bootstrap custom code; using `$border-width` instead of 1px
+      border: $border-width solid #999; // Bootstrap custom code; using `$border-width` instead of 1px
       page-break-inside: avoid;
     }
 
