--- a/assets/css/sass/banner.scss
+++ b/assets/css/sass/banner.scss
@@ -8,8 +8,8 @@
     font-size: 10vw;
     font-family: "Lucida-Demi";
 
-    @include media-breakpoint-up(md) {
-      font-size: 7vw;
+    @include media-breakpoint-up(lg) {
+      font-size: 8vw;
     }
   }
 
