--- a/assets/css/sass/instafeed.scss
+++ b/assets/css/sass/instafeed.scss
@@ -1,19 +1,70 @@
 .instafeed-container {
   width: 100vw;
+  height: 80vh;
   overflow: hidden;
+  position: relative;
 
   #instafeed {
     width: 700vw;
+    height: 90%;
 
     .instaimg {
+      background-color: black;
+      position: relative;
+      left: 0;
       transition: left 1s;
       width: 100vw !important;
-      padding: 0 5vw;
+      height: 100%;
+      // padding: 0 5vw;
 
-      .img-fluid {
-        width: 90vw;
-        max-width: initial;
+      a {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      img {
+        width: 80%;
+        height: auto;
+
+        @media only screen and (orientation: landscape) {
+          height: 80%;
+          width: auto;
+        }
+
+        @include media-breakpoint-up(lg) {
+          // width: 30vw;
+        }
       }
     }
+  }
+}
+
+#gallery-left,
+#gallery-right {
+  color: white;
+  position: absolute;
+  font-size: 1.5rem;
+}
+
+#gallery-left {
+  left: 25%;
+  transform: translateX(-50%);
+  bottom: 15%;
+
+  @media only screen and (orientation: landscape) {
+    bottom: 50%;
+  }
+}
+
+#gallery-right {
+  left: 75%;
+  transform: translateX(-50%);
+  bottom: 15%;
+
+  @media only screen and (orientation: landscape) {
+    bottom: 50%;
   }
 }
