--- a/assets/css/sass/native-collection.scss
+++ b/assets/css/sass/native-collection.scss
@@ -1,6 +1,6 @@
 .nat-col {
   font-family: "Beyond", sans-serif;
-  font-size: 10vw;
+  font-size: 15vw;
   background-image: url("../images/extra_2_vert_.jpg");
   background-size: cover;
   height: 90%;
@@ -9,9 +9,18 @@
   @media only screen and (orientation: landscape) {
     background-image: url("../images/extra_2_hor.jpg");
     background-position: center;
+    font-size: 10vw;
   }
 
   a {
-    font-size: 5vw;
+    font-size: 7vw;
+
+    @media only screen and (orientation: landscape) {
+      font-size: 4vw;
+    }
+  }
+
+  @include media-breakpoint-up(lg) {
+    font-size: 8vw;
   }
 }
