--- a/assets/css/sass/testimonials.scss
+++ b/assets/css/sass/testimonials.scss
@@ -1,3 +1,17 @@
-#testimonials {
+.test-text {
   font-size: 5vw;
+  font-family: "Lucida", serif;
+
+  @include media-breakpoint-up(md) {
+    font-size: 2.5rem;
+  }
+}
+
+.test-name {
+  font-size: 3vw;
+  font-family: "Lucida", serif;
+
+  @include media-breakpoint-up(md) {
+    font-size: 1.5rem;
+  }
 }
