replaced arrows with dots for instafeed"

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,4 +1,4 @@
-@import "../bootstrap/bootstrap-4.0.0/scss/bootstrap-reboot";
+@import "../bootstrap/scss/bootstrap-reboot";
 @import "sass/utilities/reset";
 @import "sass/utilities/fonts";
 @import "sass/header";
