--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -110,6 +110,10 @@ header {
   font-family: "Lucida", serif;
 }
 
+.product-image {
+  transition: 0.5s;
+}
+
 .nat-col {
   font-family: "Beyond", sans-serif;
   font-size: 15vw;
@@ -159,17 +163,19 @@ header {
   }
 }
 
-.instafeed-container {
+#instafeed-container {
+  background-color: black;
   width: 100vw;
+  max-width: 100%;
   height: 80vh;
   overflow: hidden;
   position: relative;
 }
-.instafeed-container #instafeed {
+#instafeed-container #instafeed {
   width: 700vw;
   height: 90%;
 }
-.instafeed-container #instafeed .instaimg {
+#instafeed-container #instafeed .instaimg {
   background-color: black;
   position: relative;
   left: 0;
@@ -177,49 +183,44 @@ header {
   width: 100vw !important;
   height: 100%;
 }
-.instafeed-container #instafeed .instaimg a {
+#instafeed-container #instafeed .instaimg a {
   width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.instafeed-container #instafeed .instaimg img {
+#instafeed-container #instafeed .instaimg img {
   width: 80%;
   height: auto;
 }
 @media only screen and (orientation: landscape) {
-  .instafeed-container #instafeed .instaimg img {
+  #instafeed-container #instafeed .instaimg img {
     height: 80%;
     width: auto;
   }
 }
-#gallery-left,
-#gallery-right {
-  color: white;
+#nav-dots {
   position: absolute;
-  font-size: 1.5rem;
+  left: 50%;
+  bottom: 5%;
+  transform: translateX(-50%);
+  display: flex;
+  border: 2px solid yellow;
 }
 
-#gallery-left {
-  left: 25%;
-  transform: translateX(-50%);
-  bottom: 15%;
+.nav-dot {
+  background-color: white;
+  border-radius: 50%;
+  height: 10px;
+  width: 10px;
+  margin: 0 5px;
 }
-@media only screen and (orientation: landscape) {
-  #gallery-left {
-    bottom: 50%;
-  }
-}
-
-#gallery-right {
-  left: 75%;
-  transform: translateX(-50%);
-  bottom: 15%;
-}
-@media only screen and (orientation: landscape) {
-  #gallery-right {
-    bottom: 50%;
+@media (min-width: 992px) {
+  .nav-dot {
+    height: 20px;
+    width: 20px;
+    margin: 0 15px;
   }
 }
 
