--- a/assets/css/sass/instafeed.scss
+++ b/assets/css/sass/instafeed.scss
@@ -1,5 +1,7 @@
-.instafeed-container {
+#instafeed-container {
+  background-color: black;
   width: 100vw;
+  max-width: 100%;
   height: 80vh;
   overflow: hidden;
   position: relative;
@@ -42,29 +44,24 @@
   }
 }
 
-#gallery-left,
-#gallery-right {
-  color: white;
+#nav-dots {
   position: absolute;
-  font-size: 1.5rem;
+  left: 50%;
+  bottom: 5%;
+  transform: translateX(-50%);
+  display: flex;
 }
 
-#gallery-left {
-  left: 25%;
-  transform: translateX(-50%);
-  bottom: 15%;
+.nav-dot {
+  background-color: white;
+  border-radius: 50%;
+  height: 10px;
+  width: 10px;
+  margin: 0 5px;
 
-  @media only screen and (orientation: landscape) {
-    bottom: 50%;
-  }
-}
-
-#gallery-right {
-  left: 75%;
-  transform: translateX(-50%);
-  bottom: 15%;
-
-  @media only screen and (orientation: landscape) {
-    bottom: 50%;
+  @include media-breakpoint-up(lg) {
+    height: 20px;
+    width: 20px;
+    margin: 0 15px;
   }
 }
