--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -203,7 +203,7 @@ header {
 #nav-dots {
   position: absolute;
   left: 50%;
-  bottom: 5%;
+  bottom: 7%;
   transform: translateX(-50%);
   display: flex;
 }
@@ -214,6 +214,7 @@ header {
   height: 10px;
   width: 10px;
   margin: 0 5px;
+  cursor: pointer;
 }
 @media (min-width: 992px) {
   .nav-dot {
@@ -226,6 +227,31 @@ header {
 .fa-facebook-f,
 .fa-instagram {
   font-size: 2rem;
+}
+
+.modal-dialog {
+  padding: 0 !important;
+}
+
+.modal-header {
+  flex-direction: column;
+}
+.modal-header .modal-title {
+  align-self: center;
+}
+
+.modal-content {
+  border-radius: 0;
+}
+
+.newsletter {
+  font-family: "Lucida", serif;
+}
+
+.newsletter-btn {
+  font-family: "Lucida", serif;
+  background-color: white;
+  border: 1px solid black;
 }
 
 /*# sourceMappingURL=main.css.map */
