--- a/assets/css/sass/instafeed.scss
+++ b/assets/css/sass/instafeed.scss
@@ -47,7 +47,7 @@
 #nav-dots {
   position: absolute;
   left: 50%;
-  bottom: 5%;
+  bottom: 7%;
   transform: translateX(-50%);
   display: flex;
 }
@@ -58,6 +58,7 @@
   height: 10px;
   width: 10px;
   margin: 0 5px;
+  cursor: pointer;
 
   @include media-breakpoint-up(lg) {
     height: 20px;
